# SPE_calculator

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  Jenkinsfile  ScientificCalculator  TestCalculator  calculator.cpp  deploy.yml  inventory  pom.xml  test  test.cpp
ansible-venv/: pyvenv.cfg
src/main/java/com/example/calculator/controller/: CalculatorController.java
src/main/resources/static/: index.html
src/test/java/com/example/calculator/: CalculatorApplicationTests.java
src/test/java/com/example/calculator/controller/: CalculatorControllerTest.java
